<?xml version="1.0"?>
<package>
  <name>mercury_sdk</name>
  <version>3.5.2</version>
  <description>This package is wrapping version of ROBOTIS Dynamxel SDK for ROS. The ROBOTIS Mercury SDK, or SDK, is a software development library that provides Mercury control functions for packet communication. The API is designed for Mercury actuators and Mercury-based platforms.</description>
  <license>BSD</license>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="rwjung@robotis.com">Leon</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/MercurySDK/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/MercurySDK</url>
  <url type="website">http://wiki.ros.org/mercury_sdk</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <export></export>
</package>
